student added to the blockchain

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </label>
         </div>
         <div class="JSON">
-          <button class="json" id="process_id">Upload to Json</button>
+          <button class="json" id="process_id">Upload Data</button>
         </div>
       </div>
     </div>
