--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -83,6 +84,7 @@
     </div>
 
     <output id="output"></output>
-    <script type="module" src="script.js"></script>
+    <!-- <script type="" src="./script.js"></script> -->
+    <script src="script.js" type="module"></script>
   </body>
 </html>
