last push pakka

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
           <input
             type="text"
             name=""
-            id="address"
-            value="3/462, Malviya Nagar"
+            id="branch"
+            value="Computer Science"
             required
           />
-          <label for="address">Address</label>
+          <label for="branch">Branch</label>
         </div>
       </div>
 
