feat: css changes

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 
-    <title>SBT</title>
+    <title>DIGNITY</title>
   </head>
   <body>
     <div class="nav">
-      <p>BTP</p>
-      <button class="connect-btn" id="connect-btn">Connect Wallet</button>
+      <p>DIGNITY</p>
     </div>
 
+    <button class="connect-btn" id="connect-btn">Connect Wallet</button>
+
     <div class="container">
+      <div class="input_field">
+        <input type="text" name="" id="account" value="" required />
+        <label for="account">Account </label>
+      </div>
+
       <div class="row1">
         <div class="input_field">
           <input type="text" name="" id="name" required />
@@ -30,33 +36,16 @@
           <input type="text" name="" id="date" required />
           <label for="date">DOB </label>
         </div>
-
-        <div class="input_field">
-          <input
-            type="text"
-            name=""
-            id="account"
-            value="0xAshuForNow"
-            required
-          />
-          <label for="account">Account </label>
-        </div>
       </div>
 
       <div class="row2">
         <div class="input_field">
-          <input type="text" name="" id="roll" value="20uec038" required />
+          <input type="text" name="" id="roll" value="" required />
           <label for="roll">Roll no.</label>
         </div>
 
         <div class="input_field">
-          <input
-            type="text"
-            name=""
-            id="branch"
-            value="Computer Science"
-            required
-          />
+          <input type="text" name="" id="branch" value="" required />
           <label for="branch">Branch</label>
         </div>
       </div>
